convert lwjgl2 Keyboard to a local enum that can bridge to lwjgl3 GLFW input
more nullity